opam-version: "2.0"
version: "4.4.2~dev"
synopsis: "GitHub APIv3 JavaScript library"
description: """
This library provides an OCaml interface to the [GitHub APIv3](https://docs.github.com/rest/)
(JSON). This library installs the JavaScript version, which uses [js_of_ocaml](http://ocsigen.org/js_of_ocaml)."""
maintainer: ["Anil Madhavapeddy <anil@recoil.org>"]
authors: [
  "Anil Madhavapeddy"
  "David Sheets"
  "Andy Ray"
  "Jeff Hammerbacher"
  "Thomas Gazagnaire"
  "Rudi Grinberg"
  "Qi Li"
  "Jeremy Yallop"
  "Dave Tucker"
]
license: "MIT"
tags: ["org:mirage" "org:xapi-project" "git"]
homepage: "https://github.com/mirage/ocaml-github"
doc: "https://mirage.github.io/ocaml-github/"
bug-reports: "https://github.com/mirage/ocaml-github/issues"
depends: [
  "dune" {>= "2.7"}
  "ocaml" {>= "4.08.0"}
  "github" {= version}
  "cohttp" {>= "4.0.0"}
  "cohttp-lwt-jsoo" {>= "4.0.0"}
  "js_of_ocaml-lwt" {>= "3.4.0"}
]
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/mirage/ocaml-github.git"
